crates/action-graph/tests/snapshots/action_graph_builder_test__action_graph_builder__run_task__run_in_ci__runs_dependents_if_both_are_ci_true.snap
---
source: crates/action-graph/tests/action_graph_builder_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace"]
    1 [ label="SyncProject(ci)"]
    2 [ label="RunTask(ci:ci4-dependency)"]
    3 [ label="RunTask(ci:ci4-dependent)"]
    1 -> 0 [ label="required"]
    2 -> 1 [ label="required"]
    3 -> 1 [ label="required"]
    3 -> 2 [ label="required"]
}
